force-app/main/default/objects/DXWorkshopObject__c/DXWorkshopObject__c.object-meta.xml
<CustomObject>
    <label>DXWorkshopObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DXWorkshopObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>