force-app/main/default/objects/DXWorkshopObject__c/fields/ws_field1__c.field-meta.xml
<CustomField>
    <fullName>ws_field1__c</fullName>
    <label>ws_field1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>