force-app/main/default/objects/DXWorkshopObject__c/fields/ws_field2__c.field-meta.xml
<CustomField>
    <fullName>ws_field2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ws_field2</label>
    <type>Checkbox</type>
</CustomField>