force-app/main/default/objects/DXWorkshopObject__c/fields/ws_field3__c.field-meta.xml
<CustomField>
    <fullName>ws_field3__c</fullName>
    <label>ws_field3</label>
    <length>250</length>
    <type>Text</type>
</CustomField>